[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visual_blocks"
version = "0.0.3"
authors = [
  { name="Jing Jin", email="jingjin@google.com" },
]
description = "Visual Blocks for Google Colaboratory"
readme = "README.pypi.md"
requires-python = ">=3.7"
classifiers = [
  "Environment :: Other Environment",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "Flask",
  "google-colab",
  "ipython",
  "portpicker",
]

[project.urls]
"Homepage" = "https://github.com/wrighkv1/visual-blocks"
"Bug Tracker" = "https://github.com/wrighkv1/visual-blocks/issues"
